Binning notebook updated to intake pre-binned data. Small typo in bin function fixed. Create NTA coordinate csv

--- a/notebooks/facilities.ipynb
+++ b/notebooks/facilities.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "fe3165f2-c41f-49b3-afc1-75b9ec062797",
    "metadata": {},
    "outputs": [],
@@ -25,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "8475b5f5-f468-4fa1-8a45-a22c9c4cec84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i ../Mid-Term/Mid-Term-Project/notebooks/functions.py"
+    "%run -i ../notebooks/functions.py"
    ]
   },
   {
@@ -230,7 +230,10 @@
   {
    "cell_type": "markdown",
    "id": "7f52e06d-ad6e-422e-b7e8-3a5baff8a655",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Libraries, Parks & Hotels"
    ]
@@ -253,7 +256,10 @@
   {
    "cell_type": "markdown",
    "id": "43f63edb-2acd-47c3-8ab0-ecc5bb9341f9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### Libraries"
    ]
@@ -279,6 +285,7 @@
    "cell_type": "markdown",
    "id": "afd1a697-f1e8-470a-b72f-a7a02ce9d759",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -360,7 +367,10 @@
   {
    "cell_type": "markdown",
    "id": "874834e4-3fd8-4748-9633-fe84e990369f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### Hotels"
    ]
@@ -392,7 +402,10 @@
   {
    "cell_type": "markdown",
    "id": "fc01f608-ce92-4d88-b169-714ca6fc3502",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### Facilities\n",
     "\n",
@@ -557,7 +570,10 @@
   {
    "cell_type": "markdown",
    "id": "121e9d02-09a7-4116-a624-660c9fb4c20a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Housing"
    ]
@@ -633,7 +649,9 @@
   {
    "cell_type": "markdown",
    "id": "b9cba784-33e3-4611-86f7-37185eb33653",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### HPD buildings"
    ]
@@ -757,17 +775,17 @@
    "id": "ef27662b-bc14-470a-bb91-4112f30778b8",
    "metadata": {},
    "source": [
-    "*Note*: the next part gets funky due to the generation of data from google API costing money. We can't rerun this part we did get the data necessary out of it. See `building_count.csv` and `building_stories.csv`"
+    "*Note*: the next part is commented out due to the generation of data from google API costing money. We can't rerun this part but we did get the data necessary out of it. See `building_count.csv` and `building_stories.csv`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fad55f33-4d05-434b-8fb2-ffcde0ae585f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#gmaps = googlemaps.Client(key=os.environ['GOOGLE_TEMP'])"
+    "#gmaps = googlemaps.Client(key=os.environ['TEMP_GOOGLE'])"
    ]
   },
   {
@@ -777,13 +795,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lat = []\n",
-    "long = []\n",
+    "#lat = []\n",
+    "#long = []\n",
     "\n",
-    "for zip_code in hbd_df.zip:\n",
-    "    pass\n",
+    "#-- DO NOT RUN -- \n",
     "\n",
-    "    #-- DO NOT RUN -- \n",
+    "#for zip_code in hbd_df.zip:\n",
+    "\n",
     "    #geocode_result = gmaps.geocode(f'{zip_code}, NY')\n",
     "    #try:\n",
     "        #lat.append(geocode_result[0]['geometry']['location']['lat'])\n",
@@ -816,7 +834,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hbd_df.info()"
+    "#hbd_df.info()"
    ]
   },
   {
@@ -826,9 +844,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NTA = pd.read_csv('../Mid-Term/Mid-Term-Project/processed_data/geocoded_population.csv').loc[:, ['latitude', 'longitude']]\n",
-    "print(NTA.shape)\n",
-    "NTA.head()"
+    "#NTA = pd.read_csv('../Mid-Term/Mid-Term-Project/processed_data/geocoded_population.csv').loc[:, ['latitude', 'longitude']]\n",
+    "#print(NTA.shape)\n",
+    "#NTA.head()"
    ]
   },
   {
