Imroved File Structure, Notebook Readability and Value Fixes
Merged pop, ped and car traffic notebooks into density
Added deprecated folder for unused notebooks (safekeeping)
Added comments to feature notebooks
Fixed zero values in population, ped and car traffics

--- a/notebooks/deprecated/pedestrian.ipynb
+++ b/notebooks/deprecated/pedestrian.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../Mid-Term-Project/raw_data/pedestrian/pedestrian.csv\")\n",
+    "df = pd.read_csv(\"../raw_data/density/pedestrian/pedestrian.csv\")\n",
     "\n",
     "df = df.drop(['Borough', 'Loc', 'OBJECTID', 'To_Street', 'Index'], axis=1)\n",
     "df = df[['the_geom', 'Street_Nam', 'From_Stree', 'May21_AM', 'May21_PM', 'May21_MD']]\n",
@@ -76,8 +76,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ped_traffic</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
+       "      <th>NTA_lat</th>\n",
+       "      <th>NTA_long</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -153,7 +153,7 @@
        "</div>"
       ],
       "text/plain": [
-       "     ped_traffic   latitude  longitude\n",
+       "     ped_traffic    NTA_lat   NTA_long\n",
        "0    1657.333333  40.879199 -73.904591\n",
        "1    1169.000000  40.826628 -73.921884\n",
        "2    3326.000000  40.862155 -73.895358\n",
@@ -176,26 +176,26 @@
    ],
    "source": [
     "df = df.drop(['Street_Nam', 'From_Stree', 'the_geom'], axis=1)\n",
-    "df['latitude'] = lat\n",
-    "df['longitude'] = lng\n",
-    "df = df[df.latitude != 0]\n",
-    "df"
+    "df['NTA_lat'] = lat\n",
+    "df['NTA_long'] = lng\n",
+    "df = df[df.NTA_lat != 0]\n",
+    "df.replace(to_replace={'ped_traffic': {0: df['ped_traffic'].median()}}, value=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8004a0db-5249-4904-ad5d-a1098171eb84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../Mid-Term-Project/processed_data/geocoded_pedestrian.csv', index=False, encoding='utf-8')"
+    "df.to_csv('../processed_data/density/geocoded_pedestrian.csv', index=False, encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ef4137e-e52c-4aa2-9f46-7ff089226a85",
+   "id": "14078beb-1977-46f9-ba4a-7a24c1b31ce3",
    "metadata": {},
    "outputs": [],
    "source": []
