--- a/notebooks/yelp.ipynb
+++ b/notebooks/yelp.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
     "import requests as re\n",
     "import json\n",
     "import pandas as pd\n",
@@ -20,9 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#load master csv for lat-long data\n",
+    "# Load master csv for lat-long data\n",
     "df = pd.read_csv(\"../processed_data/master.csv\")\n",
-    "#separate lat-long from df\n",
+    "# Separate lat-long from df\n",
     "nta_ll = df.iloc[:, :2]"
    ]
   },
@@ -33,6 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create lists of lat and long\n",
     "lat = nta_ll['NTA_lat'].to_list()\n",
     "long = nta_ll['NTA_long'].to_list()"
    ]
@@ -49,10 +51,7 @@
     "#initialize request variables\n",
     "root_endpoint = \"https://api.yelp.com/v3/businesses/search\"\n",
     "headers = {\"Accept\": \"application/json\", \n",
-    "           \"Authorization\": ('Bearer '\n",
-    "                             'MO2-UQr4yN7-3DImCA38ZJtCMhFC_3sQa-WLIK7SMQ'\n",
-    "                             'rUmMGtrOBtLEgzfYQmqcv36tupTqNBiB1IE2BrpjGLK'\n",
-    "                             'bI0b72tBtg2bBZ7toXdEUvuCvLPbL6_vqVvLtroYXYx')}"
+    "           \"Authorization\": ('YELP_API_KEY')}"
    ]
   },
   {
@@ -183,6 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create final dataframe to save\n",
     "df = pd.DataFrame(yelp_list, columns=['rating', 'price'])"
    ]
   },
@@ -193,6 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save dataframe to CSV\n",
     "df.to_csv('../processed_data/yelp.csv', index=False, encoding='utf-8')"
    ]
   },
