--- a/notebooks/density.ipynb
+++ b/notebooks/density.ipynb
@@ -24,6 +24,7 @@
    "cell_type": "markdown",
    "id": "de380ec2-866b-4434-ad57-8abc7f3c0806",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -166,6 +167,7 @@
    "cell_type": "markdown",
    "id": "60e485f0-2087-4483-831a-4feaf588a6ce",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "9b6d7a84-46a6-4003-9260-3bf4eb3249d4",
    "metadata": {},
    "outputs": [],
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "2526436b-57ac-44ea-821e-c0566d063d7b",
    "metadata": {},
    "outputs": [],
@@ -390,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "id": "288fac97-392a-4414-82fa-d1d2ee57c445",
    "metadata": {},
    "outputs": [],
@@ -405,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "56184131-21f8-4231-a87f-6b4008c2b73b",
    "metadata": {},
    "outputs": [],
@@ -425,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "id": "46e7b432-d9c4-44c3-b497-c3847ec00b57",
    "metadata": {},
    "outputs": [],
@@ -454,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "id": "eba4f1b3-f1d0-4ea3-b750-a9e3ab6f9d75",
    "metadata": {},
    "outputs": [
@@ -480,8 +482,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ped_traffic</th>\n",
-       "      <th>NTA_lat</th>\n",
-       "      <th>NTA_long</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -557,7 +559,7 @@
        "</div>"
       ],
       "text/plain": [
-       "     ped_traffic    NTA_lat   NTA_long\n",
+       "     ped_traffic   latitude  longitude\n",
        "0    1657.333333  40.879199 -73.904591\n",
        "1    1169.000000  40.826628 -73.921884\n",
        "2    3326.000000  40.862155 -73.895358\n",
@@ -573,7 +575,7 @@
        "[112 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,10 +584,10 @@
     "# Drop unused columns\n",
     "df = df.drop(['Street_Nam', 'From_Stree', 'the_geom'], axis=1)\n",
     "# Rename lat-long as per our conventions\n",
-    "df['NTA_lat'] = lat\n",
-    "df['NTA_long'] = lng\n",
+    "df['latitude'] = lat\n",
+    "df['longitude'] = lng\n",
     "# Remove broken lat-long data\n",
-    "df = df[df.NTA_lat != 0]\n",
+    "df = df[df.latitude != 0]\n",
     "# Replace 0 values with median\n",
     "df.replace(to_replace={'ped_traffic': {0: df['ped_traffic'].median()}}, value=None)"
    ]
@@ -600,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "id": "35ae8ff0-ac1a-49e3-8183-6d3684d405d7",
    "metadata": {},
    "outputs": [],
@@ -608,6 +610,14 @@
     "# Save to pedestrian CSV\n",
     "df.to_csv('../processed_data/density/geocoded_pedestrian.csv', index=False, encoding='utf-8')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16041900-e49a-4107-b3c2-53e223d9ed28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
