Small fixes. Testing with outliers. Clustering master for v3

--- a/notebooks/buildings_wellbeing.ipynb
+++ b/notebooks/buildings_wellbeing.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "8475b5f5-f468-4fa1-8a45-a22c9c4cec84",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b0584e96-d0c6-4909-8be8-43e9ff4a7c23",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "0a90d59f-cd74-4f68-ac05-57d0c342dcb6",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "795bdee9-a049-414b-8ca8-01c4844b8e26",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "4  40.764915 -73.959550"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "36513ca7-957e-4255-975a-af92e1f6247c",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "4  {'type': 'MultiPolygon', 'coordinates': [[[[-7...        0.032"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "84b379bf-18e3-45d1-84dc-822e5b78a61a",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
        "4        0.032  40.621921 -74.022569"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "d52b91f5-dfd6-43cb-8627-2fb187cfa4e7",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "64f2cb60-e225-4fff-987a-416c56ff74d1",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "4  40.714812  -74.016153"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "cb08d70b-3d5f-423d-af7d-244d060bec00",
    "metadata": {},
    "outputs": [],
@@ -562,11 +562,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "553f1822-53ae-4ef6-b227-d6c7f907dc96",
+   "cell_type": "markdown",
+   "id": "3ff62e05-3f7b-4136-af1a-f3c390d0ff14",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#--- ORIGINAL SUBGROUPS --\n",
     "#define subgroups we want\n",
@@ -578,19 +576,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "4bca13e6-a702-4db7-a2b0-fdcff7717ca4",
    "metadata": {},
    "outputs": [],
    "source": [
     "#--- EXPERIMENT SUBGROUPS --\n",
-    "#facility_subgroup = ['PUBLIC K-12 SCHOOLS', 'COLLEGES OR UNIVERSITIES',\n",
-    " #                   'HOSPITALS AND CLINICS', 'DAY CARE'] "
+    "facility_subgroup = ['PUBLIC K-12 SCHOOLS', 'NON-PUBLIC K-12 SCHOOLS',\n",
+    "                     'HOSPITALS AND CLINICS', 'DAY CARE'] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "80877d9c-083f-43f8-85dd-f7063ba36199",
    "metadata": {
     "tags": []
@@ -616,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "6f7aa274-f041-4e2e-b02a-2f196fe87a97",
    "metadata": {},
    "outputs": [
@@ -624,14 +622,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BUS DEPOTS AND TERMINALS 144\n",
-      "PARKING LOTS AND GARAGES 2559\n",
-      "MUSEUMS 138\n",
-      "STREETSCAPES, PLAZAS, AND MALLS 560\n",
-      "NON-PUBLIC K-12 SCHOOLS 1113\n",
       "PUBLIC K-12 SCHOOLS 1515\n",
-      "COLLEGES OR UNIVERSITIES 132\n",
-      "HOSPITALS AND CLINICS 1191\n"
+      "NON-PUBLIC K-12 SCHOOLS 1113\n",
+      "HOSPITALS AND CLINICS 1191\n",
+      "DAY CARE 2264\n"
      ]
     }
    ],
@@ -643,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "462bac8a-f7c4-4f3a-b6c6-885e9c5b8ccc",
    "metadata": {},
    "outputs": [],
@@ -659,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "95b09cfb-c389-400d-aed6-713cff7b01ec",
    "metadata": {},
    "outputs": [
@@ -691,28 +685,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>40.60830100000</td>\n",
-       "      <td>-73.91992100000</td>\n",
+       "      <td>40.63660846100</td>\n",
+       "      <td>-74.13247581100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>40.59377800000</td>\n",
-       "      <td>-73.99212800000</td>\n",
+       "      <td>40.88822009500</td>\n",
+       "      <td>-73.85266908930</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>40.65488200000</td>\n",
-       "      <td>-73.89167300000</td>\n",
+       "      <td>40.71828398100</td>\n",
+       "      <td>-74.01096910700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>40.76045300000</td>\n",
-       "      <td>-74.00046400000</td>\n",
+       "      <td>40.59793367110</td>\n",
+       "      <td>-74.07013452940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>40.59294100000</td>\n",
-       "      <td>-73.77963200000</td>\n",
+       "      <td>40.82143759600</td>\n",
+       "      <td>-73.85589683460</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -720,14 +714,14 @@
       ],
       "text/plain": [
        "         latitude        longitude\n",
-       "0  40.60830100000  -73.91992100000\n",
-       "1  40.59377800000  -73.99212800000\n",
-       "2  40.65488200000  -73.89167300000\n",
-       "3  40.76045300000  -74.00046400000\n",
-       "4  40.59294100000  -73.77963200000"
+       "0  40.63660846100  -74.13247581100\n",
+       "1  40.88822009500  -73.85266908930\n",
+       "2  40.71828398100  -74.01096910700\n",
+       "3  40.59793367110  -74.07013452940\n",
+       "4  40.82143759600  -73.85589683460"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,17 +733,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "b12bad59-3949-42dd-86a7-dd41872cae81",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(7352, 3) (7352, 3)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -779,48 +766,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>BUS DEPOTS AND TERMINALS</td>\n",
-       "      <td>40.60830100000</td>\n",
-       "      <td>-73.91992100000</td>\n",
+       "      <td>PUBLIC K-12 SCHOOLS</td>\n",
+       "      <td>40.63660846100</td>\n",
+       "      <td>-74.13247581100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>BUS DEPOTS AND TERMINALS</td>\n",
-       "      <td>40.59377800000</td>\n",
-       "      <td>-73.99212800000</td>\n",
+       "      <td>PUBLIC K-12 SCHOOLS</td>\n",
+       "      <td>40.88822009500</td>\n",
+       "      <td>-73.85266908930</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>BUS DEPOTS AND TERMINALS</td>\n",
-       "      <td>40.65488200000</td>\n",
-       "      <td>-73.89167300000</td>\n",
+       "      <td>PUBLIC K-12 SCHOOLS</td>\n",
+       "      <td>40.71828398100</td>\n",
+       "      <td>-74.01096910700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>BUS DEPOTS AND TERMINALS</td>\n",
-       "      <td>40.76045300000</td>\n",
-       "      <td>-74.00046400000</td>\n",
+       "      <td>PUBLIC K-12 SCHOOLS</td>\n",
+       "      <td>40.59793367110</td>\n",
+       "      <td>-74.07013452940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>BUS DEPOTS AND TERMINALS</td>\n",
-       "      <td>40.59294100000</td>\n",
-       "      <td>-73.77963200000</td>\n",
+       "      <td>PUBLIC K-12 SCHOOLS</td>\n",
+       "      <td>40.82143759600</td>\n",
+       "      <td>-73.85589683460</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    factype        latitude        longitude\n",
-       "0  BUS DEPOTS AND TERMINALS  40.60830100000  -73.91992100000\n",
-       "1  BUS DEPOTS AND TERMINALS  40.59377800000  -73.99212800000\n",
-       "2  BUS DEPOTS AND TERMINALS  40.65488200000  -73.89167300000\n",
-       "3  BUS DEPOTS AND TERMINALS  40.76045300000  -74.00046400000\n",
-       "4  BUS DEPOTS AND TERMINALS  40.59294100000  -73.77963200000"
+       "               factype        latitude        longitude\n",
+       "0  PUBLIC K-12 SCHOOLS  40.63660846100  -74.13247581100\n",
+       "1  PUBLIC K-12 SCHOOLS  40.88822009500  -73.85266908930\n",
+       "2  PUBLIC K-12 SCHOOLS  40.71828398100  -74.01096910700\n",
+       "3  PUBLIC K-12 SCHOOLS  40.59793367110  -74.07013452940\n",
+       "4  PUBLIC K-12 SCHOOLS  40.82143759600  -73.85589683460"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,13 +817,12 @@
     "facility_all = pd.concat(facility_df).reset_index().drop('level_1', axis = 1)\n",
     "facility_all = facility_all.rename(columns={'level_0': 'factype'})\n",
     "#check\n",
-    "print(facility_all.shape, facility_clean.shape)\n",
     "facility_all.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "a8f97261-cbc6-4d2a-95cf-22aa4bd56ec6",
    "metadata": {},
    "outputs": [],
@@ -847,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "305bc97c-ffc1-4874-b7d2-a3cabd776faf",
    "metadata": {},
    "outputs": [
@@ -860,7 +846,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,8 +859,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e11c8d32-5e50-4db2-971b-86b0f07a62fd",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### To csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dfe1478a-e577-4e1f-9eea-0334ac956a6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save final dataframes to csv\n",
+    "library_df.to_csv('../processed_data/wellbeing/libraries.csv', index=False)\n",
+    "parks_df.to_csv('../processed_data/wellbeing/parks.csv', index=False)\n",
+    "hotels_df.to_csv('../processed_data/wellbeing/hotels.csv', index=False)\n",
+    "facility_clean.to_csv('../processed_data/wellbeing/facilities.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a35ce136-ddba-40f3-b3e1-2555d374a091",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['PUBLIC K-12 SCHOOLS', 'NON-PUBLIC K-12 SCHOOLS',\n",
+       "       'HOSPITALS AND CLINICS', 'DAY CARE'], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "facility_clean.factype.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "121e9d02-09a7-4116-a624-660c9fb4c20a",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Housing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "024cb881-8a37-40b4-8a3a-9092fd68cf02",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -883,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "ba6b9c06-af0c-40f1-a887-7e3fa1b0a281",
    "metadata": {},
    "outputs": [],
@@ -896,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "8a0bec89-4224-42db-affa-84d7c5e59583",
    "metadata": {},
    "outputs": [
@@ -918,124 +961,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "1bf85c6b-02d6-4aac-9c98-5949d7d70cdd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>total_units</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>11</td>\n",
-       "      <td>40.877928</td>\n",
-       "      <td>-73.863282</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11</td>\n",
-       "      <td>40.825108</td>\n",
-       "      <td>-73.940244</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9</td>\n",
-       "      <td>40.825226</td>\n",
-       "      <td>-73.940179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9</td>\n",
-       "      <td>40.825290</td>\n",
-       "      <td>-73.940132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "      <td>40.824818</td>\n",
-       "      <td>-73.940682</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   total_units   latitude  longitude\n",
-       "0           11  40.877928 -73.863282\n",
-       "1           11  40.825108 -73.940244\n",
-       "2            9  40.825226 -73.940179\n",
-       "3            9  40.825290 -73.940132\n",
-       "4           10  40.824818 -73.940682"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#coerce dtype to be numeric\n",
-    "house_start_df = house_start_df.apply(pd.to_numeric, errors='coerce')\n",
-    "house_start_df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e11c8d32-5e50-4db2-971b-86b0f07a62fd",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### To csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "dfe1478a-e577-4e1f-9eea-0334ac956a6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#save final dataframes to csv\n",
-    "library_df.to_csv('../processed_data/wellbeing/libraries.csv', index=False)\n",
-    "parks_df.to_csv('../processed_data/wellbeing/parks.csv', index=False)\n",
-    "hotels_df.to_csv('../processed_data/wellbeing/hotels.csv', index=False)\n",
-    "facility_clean.to_csv('../processed_data/buildings/facilities.csv', index=False)\n",
+    "#coerce dtype to be numeric\n",
+    "house_start_df = house_start_df.apply(pd.to_numeric, errors='coerce')\n",
+    "house_start_df.head()\n",
     "house_start_df.to_csv('../processed_data/buildings/house_start.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "121e9d02-09a7-4116-a624-660c9fb4c20a",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Housing"
    ]
   },
   {
@@ -1050,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "36375a99-2fa5-4f45-a8b5-040c0eff46d4",
    "metadata": {},
    "outputs": [],
@@ -1063,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "7b182f60-0890-420e-89ef-87355a1fe906",
    "metadata": {},
    "outputs": [],
@@ -1075,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "3e364ce3-d2ac-47c5-b7fa-aefbb0a50e56",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1077,7 @@
        "4  11226            2"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "fad55f33-4d05-434b-8fb2-ffcde0ae585f",
    "metadata": {},
    "outputs": [],
@@ -1173,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "c661ece3-b71e-45d0-a1c3-6685cf36518f",
    "metadata": {},
    "outputs": [],
@@ -1196,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "d4ba68e7-bb6c-4940-9616-23be757b0e78",
    "metadata": {},
    "outputs": [],
@@ -1212,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "04292923-d08f-40f1-bf53-1e97983e249a",
    "metadata": {},
    "outputs": [],
@@ -1222,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "149b9384-bbb4-48c4-bbdb-901f9990d129",
    "metadata": {},
    "outputs": [],
@@ -1234,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "23c0830d-e843-4153-a0b7-7a72fe3f9cb8",
    "metadata": {},
    "outputs": [],
@@ -1246,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "345c4227-a91a-4957-b6f7-9cbd41ec1b1c",
    "metadata": {},
    "outputs": [],
@@ -1256,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "e36d47bf-ad9f-40a6-8146-8755aa620247",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "9f75b469-fd26-4a8e-9b65-3399c8698d20",
    "metadata": {},
    "outputs": [],
